added some scripts and styles as well. git status q

--- a/index.html
+++ b/index.html
@@ -15,22 +15,24 @@
       </div>
 
       <div class="row">
-        <form>
-          <h3>Select yout preference using the below drop down menu to see your suggested track:</h3>
-          <br>
-          <br>
-          <label for="devOption">1- Do you like to:
-            A- make pages look great using layouts,colors and design? or B- design and develop codes that will execute users request or C- do both?</label>
+
+        <h3>Select yout preference using the below drop down menu to see your suggested track:</h3>
+        <br>
+        <div class="col-md-6" id="devOption">
+          <label>1- Do you like to:
+            A- make pages look great using layouts, colors and design? or B- design and develop codes that will execute users request or C- do both?</label>
             <p>(Please make your selection below)</p>
+            <form>
             <select class="form-control" id="whichOption">
               <option>A</option>
               <option>B</option>
               <option>C</option>
             </select>
           <br>
+          <button type="submit" class="btn">Submit you selection</button>
+          </form>
+        </div>
 
-          <button type="submit" class="btn1">Submit</button>
-        </form>
       </div>
 
       <div class="row" id="frontEnd">
