--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Programming Track Suggester</title>
+    <title>Programming Track-Suggester</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.1.1.js" type="text/javascript"></script>
@@ -11,25 +11,25 @@
 
     <div class="container">
       <div class="jumbotron">
-        <h1>DEVELOPER TRACK SUGGESTER</h1>
+        <h1>DEVELOPER TRACK-SUGGESTER</h1>
       </div>
 
       <div class="row">
-
-        <h3>Select yout preference using the below drop down menu to see your suggested track:</h3>
-        <br>
         <div class="col-md-6" id="devOption">
+          <h3>Select yout preference using the below drop down menu to see your suggested track:</h3>
+          <br>
+          <br>
           <label>1- Do you like to:
             A- make pages look great using layouts, colors and design? or B- design and develop codes that will execute users request or C- do both?</label>
             <p>(Please make your selection below)</p>
-            <form>
+          <form id="form1">
             <select class="form-control" id="whichOption">
               <option>A</option>
               <option>B</option>
               <option>C</option>
             </select>
-          <br>
-          <button type="submit" class="btn">Submit you selection</button>
+            <br>
+            <button type="submit" class="btn">Submit you selection</button>
           </form>
         </div>
 
@@ -40,9 +40,9 @@
           <h3>Congratulation! You are definitely cut for the Front End Programming. Please consider registering for the design/  track at Epicodus.</h3>
           <p>Here are additional resourcefull site you can check to get more insideful informations about front end programming:</p>
           <ul>
-            <li><a>Treehouse</li>
-            <li>Epicodus</li>
-            <li>XXXX</li>
+            <li><a href="https://teamtreehouse.com/">Treehouse</a></li>
+            <li><a href="https://www.learnhowtoprogram.com/design">Design at Epicodus</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Front-end_web_development">Wiki- Front End Web Development</a></li>
           </ul>
         </div>
         <div class="col-md-1">
@@ -54,42 +54,49 @@
       </div>
 
       <div class="row" id="backEnd">
+
+        <h3>If you are reading this message, you must be cut for back end programming. To help you narrow down to the language that will best serve your purpose, please answer the below additional questions:</h3>
+        <br>
+        <br>
         <form>
-          <h3>If you are ready this message, you must be cut for back end programming. To help you narrow down to the language that will best serve your purpose, please answer the below additional questions:</h3>
-          <br>
-          <br>
-          <label for="questions">3- What type of companies are you targeting for employment:</label>
-            <select class="form-control" id="question">
-              <option value="csharp">Large Corporations</option>
-              <option value="java">>Any Company</option>
-              <option value="php">>Governement Agencies</option>
-              <option value="ruby">>StartUp/Small Companies</option>
+          <label for="questions">2- What type of companies are you targeting for employment:</label>
+            <select class="form-control" id="question2">
+              <option value="cSharp">Large Corporations</option>
+              <option value="java">Any Company</option>
+              <option value="php">Governement Agencies</option>
+              <option value="ruby">StartUp/Small Companies</option>
             </select>
           <br>
-          <label for="questions">Question 2</label>
-            <select class="form-control" class="question">
-              <option value="csharp">Windows / Microsoft</option>
-              <option value="java">>Any platform</option>
-              <option value="php">>Linux/Unix</option>
-              <option value="ruby">>Mac</option>
+          <label for="questions">3- What platform are you comfortable operating in?</label>
+            <select class="form-control" class="question3">
+              <option value="cSharp">Windows / Microsoft</option>
+              <option value="java">Any platform</option>
+              <option value="php">Linux/Unix</option>
+              <option value="ruby">Mac</option>
             </select>
           <br>
-          <label for="questions">4- What platform do you prefer to operate on?</label>
-            <select class="form-control" class="question">
-              <option value="csharp">Business Software</option>
+          <label for="questions">4- What are you interested in working on?</label>
+            <select class="form-control" class="question4">
+              <option value="cSharp">Business Software</option>
               <option value="java">High Performance Applications</option>
               <option value="php">Low Interaction Heavy Content Sites</option>
-              <option value="ruby">>Interactive Web Applications</option>
+              <option value="ruby">Interactive Web Applications</option>
             </select>
           <br>
-          <label for="questions">What are you interested in working on?</label>
-            <select class="form-control" class="question">
-              <option value="1"
+          <label for="questions">5- Would you recommand this site to your friends?</label>
+            <select class="form-control" class="question5">
+              <option>Yes</option>
+              <option>No</option>
             </select>
           <br>
-          <label for="questions">Question 5</label>
-
+          <button type="submit" class="btn btn-info" id="blue">Submit your additional selection</button>
         </form>
+      </div>
+      <br>
+      <div class="row" id="languageSuggested">
+        <div class="col-md-6">
+          <h4>Based on your preference for <span>corporation</span>' your soft spot for <span>application</span> and your comfortability with <span>system</span> system, we fill you should consider the <span class="language"></span> track.</h4>
+        </div>
       </div>
     </div>
 
