--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
       </div>
       <br>
       <div class="row" id="languageSuggested">
-        <div class="col-md-6">
-          <h4>Based on your preference for <span>corporation</span>' your soft spot for <span>application</span> and your comfortability with <span>system</span> system, we fill you should consider the <span class="language"></span> track.</h4>
+        <div class="col-md-6" id="decision">
+          <h4>Based on your preference for <span class="question2"></span> your soft spot for <span class="question4"></span> and your comfortability with <span class="question5"></span>system, we fill you should consider the <span class="language"></span> track.</h4>
         </div>
       </div>
     </div>
