option C is now displaying both options results as expected

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </form>
       </div>
       <br>
-      <div class="row" id="languageSuggested">
+      <div class="row">
         <div class="col-md-6" id="decision">
           <h4>Based on your preference for <span class="question2"></span> your soft spot for <span class="question4"></span> and your comfortability with <span class="question5"></span>system, we fill you should consider the <span class="language"></span> track.</h4>
         </div>
