--- a/backEnd.html
+++ b/backEnd.html
@@ -1,56 +1,16 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
   <head>
-    <title>Programming Track-Suggester</title>
+    <title>decision</title>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.1.1.js" type="text/javascript"></script>
     <script src="js/scripts.js" type="text/javascript"></script>
   </head>
   <body>
-
     <div class="container">
       <div class="jumbotron">
         <h1>DEVELOPER TRACK-SUGGESTER</h1>
-      </div>
-
-      <div class="row">
-        <div class="col-md-6" id="devOption">
-          <h3>Select yout preference using the below drop down menu to see your suggested track:</h3>
-          <br>
-          <br>
-          <label>1- Do you like to:
-            A- make pages look great using layouts, colors and design? or B- design and develop codes that will execute users request or C- do both?</label>
-            <p>(Please make your selection below)</p>
-          <form id="form1">
-            <select class="form-control" id="whichOption">
-              <option>A</option>
-              <option>B</option>
-              <option>C</option>
-            </select>
-            <br>
-            <button type="submit" class="btn">Submit you selection</button>
-          </form>
-        </div>
-
-      </div>
-
-      <div class="row" id="frontEnd">
-        <div class="col-md-6">
-          <h3>Congratulation! You are definitely cut for the Front End Programming. Please consider registering for the design/  track at Epicodus.</h3>
-          <p>Here are additional resourcefull site you can check to get more insideful informations about front end programming:</p>
-          <ul>
-            <li><a href="https://teamtreehouse.com/">Treehouse</a></li>
-            <li><a href="https://www.learnhowtoprogram.com/design">Design at Epicodus</a></li>
-            <li><a href="https://en.wikipedia.org/wiki/Front-end_web_development">Wiki- Front End Web Development</a></li>
-          </ul>
-        </div>
-        <div class="col-md-1">
-
-        </div>
-        <div class="col-md-5">
-          <img src="img/frontEnd.png" alt="frontEnd"/>
-        </div>
       </div>
 
       <div class="row" id="backEnd">
@@ -95,7 +55,5 @@
         <footer><em>Please <a href="index.html">click here</a> to return to the initial page.</em></footer>
       </div>
 
-    </div>
-
   </body>
-</html>
+</html> -->
