All logics are now working and all requests executing as expected

--- a/index.html
+++ b/index.html
@@ -91,10 +91,19 @@
           <br>
           <button type="submit" class="btn btn-info" id="blue">Submit your additional selection</button>
         </form>
-        <br>
-        <footer><em>Please <a href="index.html">click here</a> to return to the initial page.</em></footer>
+
       </div>
 
+      <div class="row">
+        <div class="col-md-8" id="decision">
+          <h2>Based on your preference for company size, applications and systems, we feel you should consider:</h2>
+             <h1><span class="language"></span>.</h1>
+        </div>
+      </div>
+      <br>
+      <div class="row">
+        <footer><em>Please <a href="index.html">click here</a> to return to the initial page.</em></footer>
+      </div>
     </div>
 
   </body>
