working on adding more styling to the page - use hover for some special effects

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <br>
           <label>1- Do you like to:
             A- make pages look great using layouts, colors and design? or B- design and develop codes that will execute users request or C- do both?</label>
-            <p>(Please make your selection below)</p>
+            <p><em>(Please make your selection below)</em></p>
           <form id="form1">
             <select class="form-control" id="whichOption">
               <option>A</option>
@@ -49,7 +49,7 @@
 
         </div>
         <div class="col-md-5">
-          <img src="img/frontEnd.png" alt="frontEnd"/>
+          <img id="frontendpic" src="img/frontEnd.png" alt="frontEnd"/>
         </div>
       </div>
 
@@ -89,7 +89,7 @@
               <option>No</option>
             </select>
           <br>
-          <button type="submit" class="btn btn-info" id="blue">Submit your additional selection</button>
+          <button type="submit" class="btn" id="blue">Submit your additional selection</button>
         </form>
 
       </div>
