finalized styling to a happy 2nd final draft.

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <div class="row">
         <div class="col-md-8" id="decision">
           <h2>Based on your preference for company size, applications and systems, we feel you should consider:</h2>
-             <h1><span class="language"></span>.</h1>
+             <h1><span class="language"></span></h1>
         </div>
       </div>
       <br>
