Add pic- Updated styling to final version

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <h1>DEVELOPER TRACK-SUGGESTER</h1>
       </div>
 
-      <div class="row">
-        <div class="col-md-6" id="devOption">
+      <div class="row" id="devOption">
+        <div class="col-md-6">
           <h3>Select yout preference using the below drop down menu to see your suggested track:</h3>
           <br>
           <br>
@@ -32,7 +32,9 @@
             <button type="submit" class="btn">Submit you selection</button>
           </form>
         </div>
-
+        <div class="col-md-6">
+          <img id="mainpagepic" src="img/languages.png" alt="devLanguages"/>
+        </div>
       </div>
 
       <div class="row" id="frontEnd">
